[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI-Godot/DebugMode.gd" type="Script" id=1]
[ext_resource path="res://Art/Theme/MinimalUI/MinimalUI.tres" type="Theme" id=2]

[node name="DebugMode" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -131.0
margin_right = 45.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 90.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed: 0"

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_top = 27.0
margin_right = 90.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Size: 0"

[node name="Label3" type="Label" parent="HBoxContainer"]
margin_top = 54.0
margin_right = 90.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rotation: 0"

[node name="Label4" type="Label" parent="HBoxContainer"]
margin_top = 81.0
margin_right = 90.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Success: No"

[node name="Label5" type="Label" parent="HBoxContainer"]
margin_top = 108.0
margin_right = 90.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: "

[node name="Label6" type="Label" parent="HBoxContainer"]
margin_top = 90.0
margin_right = 102.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Timer:"

[node name="Label7" type="Label" parent="HBoxContainer"]
margin_top = 108.0
margin_right = 102.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "travelled Pixels:"
